plugins {
    id 'war'
    id 'groovy'
    id 'jacoco' // For code coverage
    id("org.gretty") version "4.1.10"
}

group = 'com.brunorozendo'
version = '1.0.0'


java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.GRAAL_VM
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'
    // The core MCP SDK for Java
    implementation 'io.modelcontextprotocol.sdk:mcp:0.14.1'

    // A library for generating text diffs, using the correct Maven coordinates
    implementation 'io.github.java-diff-utils:java-diff-utils:4.12'

    // Jackson for object mapping, provided by the MCP SDK but good to be aware of
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.1'

    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.20'
    implementation 'ch.qos.logback:logback-core:1.5.20'


    // Spock and Groovy for testing
    testImplementation platform('org.spockframework:spock-bom:2.4-M6-groovy-4.0')
    testImplementation 'org.spockframework:spock-core'

    // Spock reports
    testImplementation "com.athaydes:spock-reports:2.5.1-groovy-4.0"
}

test{
    useJUnitPlatform()
    testLogging {
        //events "FAILED","PASSED","SKIPPED","STANDARD_ERROR","STANDARD_OUT","STARTED"
        events "FAILED","PASSED","SKIPPED"
    }
    finalizedBy jacocoTestReport // Generate report after tests run
}



tasks.named('wrapper') {
    gradleVersion = '9.1.0'
    distributionType = Wrapper.DistributionType.ALL
}
